--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>HECHO CON HANDLEBARS</title>
+    <title>PRODUCTOS CON CHAT</title>
 </head>
 <body>
     <nav>
@@ -23,6 +23,10 @@
     
 </div>
 
+<div id = "canalChat">
+    
+
+</div>
 
 
 </html>
